# vulsy

./: .cursorrules  .gitignore  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
dev/docker/: grafana-datasources-local.yaml  loki-local-config.yaml  mimir-local-config.yaml  otel-collector-config.yaml  tempo-local-config.yaml
dev/scripts/: gen_ref_nav.py
docs/: SUMMARY.md  index.md
docs/decisions/: 0000-record-architecture-decisions.md  0001-use-python-as-programming-language.md  0002-use-pyproject.toml-for-project-setup.md  0003-code-linting-formatting-and-type-checking.md  0004-event-driven.md  0005-ensure-data-integrity.md  0006-use-pytest-as-testing-library.md  0007-don-t-use-type-checking-for-tests.md  0008-use-typer-as-cli-library.md  0009-vulnerability-data-ingestion-process.md  0010-couchbase-as-database.md  0011-everything-in-utc.md  0012-use-abc-for-interfaces.md  0013-use-opentelemetry-for-tracing.md  0014-use-grafana-stack-for-observability.md  0015-use-google-python-docstring-style.md  0016-use-mkdocs-for-documentation.md  index.md
docs/info/: index.md  notes.md  run.md
docs/ingestion/: index.md  nvd.md
docs/templates/: adr.jinja
tests/: conftest.py  docker-compose.yaml
tests/common/: test_simpel.py
tests/common/couchbase_storage/: test_generic.py  test_ingestion.py  test_transform.py
tests/common/crypto/: test_rsa.py  test_sha256.py
tests/common/http/: test_client.py
tests/common/text/: test_normalization.py  test_text.py
tests/common/types/: test_cve.py  test_date.py  test_epoch.py  test_isoutcdatetime.py  test_url.py
tests/data/: test-private-key.pem  test-public-key.pem
tests/vulnerability_pipeline/ingestion/: test_ingest.py  test_models.py
tests/vulnerability_pipeline/ingestion/sources/: test_nvd.py
tests/vulnerability_pipeline/transformation/: test_transform.py
vulsy/: __init__.py  main.py  settings.py
vulsy/common/: __init__.py  simpel.py
vulsy/common/couchbase_storage/: __init__.py  exceptions.py  main.py  server.py
vulsy/common/couchbase_storage/repo/: __init__.py  generic.py  ingestion.py  transform.py
vulsy/common/couchbase_storage/setup/: __init__.py  configuration.py  initialization.py
vulsy/common/crypto/: __init__.py  rsa.py  sha256.py
vulsy/common/http/: __init__.py  client.py
vulsy/common/text/: __init__.py  normalization.py  text.py
vulsy/common/types/: __init__.py  cve.py  date.py  epoch.py  isoutcdatetime.py  url.py
vulsy/vulnerability_pipeline/: __init__.py
vulsy/vulnerability_pipeline/ingestion/: __init__.py  ingest.py  main.py  models.py  names.py
vulsy/vulnerability_pipeline/ingestion/sources/: __init__.py  nvd.py
vulsy/vulnerability_pipeline/transformation/: __init__.py  events.py  models.py  transform.py
(+2 files in other folders)
